--- a/templates/websites/list.html
+++ b/templates/websites/list.html
@@ -13,7 +13,12 @@
     {% for website in website_list %}
         <li>
             <p>{{ website.name }}: </p>
-            <a href="{{ website.url }}" target="_blank">{{ website.url }}</a>
+            <a href="{% url 'websites:get_website' website.name %}" target="_blank">{{ website.url }}</a>
+            <a href="{% url 'websites:update' website.id %}" target="_blank">Update</a>
+            <form action="{% url 'websites:delete' website.id %}" method="POST" style="display:inline;">
+                {% csrf_token %}
+                <button type="submit" onclick="return confirm('Are you sure you want to delete this website?');">Delete</button>
+            </form>
         </li>
     {% empty %}
         <li>No websites available.</li>
