--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
   
   {% if user.is_authenticated %}
     <a href="{% url 'users:detail' %}">Profile</a>
+    <a href="{% url 'websites:list' %}">Websites</a>
     <form method="POST" action="{% url 'users:logout' %}">
       {% csrf_token %}
       <button type="submit">Logout</button>
