--- a/templates/websites/list.html
+++ b/templates/websites/list.html
@@ -19,6 +19,8 @@
                 {% csrf_token %}
                 <button type="submit" onclick="return confirm('Are you sure you want to delete this website?');">Delete</button>
             </form>
+            <p>Transitions: {{ website.transition_count }} </p>
+            <p>Bytes: {{ website.bytes_count }} </p>
         </li>
     {% empty %}
         <li>No websites available.</li>
